--- a/auth/login.html
+++ b/auth/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page - Mahir Blog</title>
     <link rel="stylesheet" href="../styles/login.css">
+    <link rel="shortcut icon" href="../assets/login.svg" type="image/x-icon">
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -48,7 +49,7 @@
             const password = passwordInput.value.trim();
 
             if (emailInput === "" || password === "") {
-                alert("Email atau Password tidak boleh kosong!!!");
+                alert("Email atau Password tidak boleh kosong!");
                 return;
             }
 
@@ -60,7 +61,7 @@
             if (authStudent) {
                 window.location.href = "../admin/dashboard.html";
                 createSession(authStudent);
-                alert("Login Berhasil");
+                alert("Login Berhasil!");
             } else {
                 alert("Email atau password tidak sesuai")
             }
